  See menu "File" --> "Global Preferences" --> tab "SQL formatting" --> "Column list split behavior"

Netezza SYNONYM support added and enhanced 
  Thanks to Richard Kooijman for the patch

New high definition icon
  Thanks to Richard Kooijman for the patch


Graph plugin: Added a 'NOT LIKE' operator to Query builder filter.

Bug fixes:

#1298 DROP TABLE IF EXISTS doubles VIEW content

#1297 Data Type Controls (max number of digits input - no error handling)

#1289 Connection Error Dialog does not show the actual JDBC error message emitted
  Thanks to Peter G. Horvath for the patch.

#1206 The workaround implemented lately has been replaced by a proper resolution
 Thanks to Krzysztof Szymko for the patch.

Postgres Plugin: Procedure sources are now shown with signature
  rather than only procedure's body code.
 Thanks to Krzysztof Szymko for the patch.


#1290 Bookmarks plugin: NPE Add empty bookmark --> Empty bookmarks are prevented
#1291 Bookmarks plugin: Add Bookmark dialog looks awfully
#1292 Bookmarks plugin: Edit bookmark is not refreshing User bookmarks tree


When menu File --> Global Preferences --> tab "Data Type Controls" --> "Show newlines as \n within cells"
 was activated newlines where replaced by /n instead of \n
 (mentioned in Bug #1005)

Table export to MS Excel failed when only the selected part of a table was chosen to export.

#1287 On MacOS, the launcher script contains a hard-coded reference to Contents/Resources/Java
  Thanks to Peter G. Horvath for the fix.

Old application icon was shown Unix/Linux OSes.

#618 sqlparam plugin asks for commented variables  is now also fixed for /* */ style comments

#1276 DB Copy Plugin: An error occurred when a table was copied and the table name needed to be double quoted.

Session tabs wheren't selected on mouse click. This bug occurred since the "Tabs can be closed by middle mouse click" feature.

Reconnecting (ctrl alt t) failed on Vertica DB with error: